// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Open API 3.0 Generation Component Schema Should able to generate object with cross reference 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tags": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to generate object with cross reference 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
    "users": Object {
      "items": Object {
        "$ref": "#/components/schemas/User",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to generate object with unregistered object with self reference 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tags": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to generate object with unregistered object with self reference 2`] = `
Object {
  "properties": Object {
    "children": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to mix registered an non registered object 1`] = `
Object {
  "properties": Object {
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to mix registered an non registered object 2`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "$ref": "#/components/schemas/Tag",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to mix registered an non registered object 3`] = `
Object {
  "properties": Object {
    "animal": Object {
      "$ref": "#/components/schemas/Animal",
    },
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should able to register object with the same name 1`] = `
Object {
  "DynamicType": Object {
    "properties": Object {
      "one": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "DynamicType1": Object {
    "properties": Object {
      "two": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "DynamicType2": Object {
    "properties": Object {
      "three": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "System-DefaultErrorMessage": Object {
    "properties": Object {
      "message": Object {
        "type": "string",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "System-ValidationError": Object {
    "properties": Object {
      "message": Object {
        "items": Object {
          "properties": Object {
            "messages": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
            "path": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`Open API 3.0 Generation Component Schema Should add readonly information on property marked with @authorize.readonly() 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "readOnly": true,
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should add writeonly information on property marked with @authorize.writeonly() 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
      "writeOnly": true,
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should create inline array object if nested object not registered 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should create inline array object if nested object not registered 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should create inline object on nested object if not registered 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "$ref": "#/components/schemas/Tag",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should create inline object on nested object if not registered 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should detect object component 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should detect system object component 1`] = `
Object {
  "properties": Object {
    "message": Object {
      "type": "string",
    },
    "status": Object {
      "type": "number",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should detect system object component 2`] = `
Object {
  "properties": Object {
    "message": Object {
      "items": Object {
        "properties": Object {
          "messages": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
          "path": Object {
            "items": Object {
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
    "status": Object {
      "type": "number",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should use reference on nested array object if array element already registered 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should use reference on nested array object if array element already registered 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should use reference on nested object if object already registered 1`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "$ref": "#/components/schemas/Tag",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Component Schema Should use reference on nested object if object already registered 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able add enums information 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id",
    "required": false,
    "schema": Object {
      "enum": Array [
        "a",
        "b",
      ],
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Decorators Should able add enums information in name binding 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "properties": Object {
          "id": Object {
            "enum": Array [
              "a",
              "b",
            ],
            "type": "string",
          },
          "name": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "properties": Object {
          "id": Object {
            "enum": Array [
              "a",
              "b",
            ],
            "type": "string",
          },
          "name": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Decorators Should able add enums information in object property 1`] = `
Object {
  "properties": Object {
    "id": Object {
      "enum": Array [
        "a",
        "b",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able add enums information with @val.enums() 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id",
    "required": false,
    "schema": Object {
      "enum": Array [
        "a",
        "b",
      ],
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Decorators Should able to add description on action 1`] = `"Lorem ipsum dolor sit amet"`;

exports[`Open API 3.0 Generation Decorators Should able to add description on parameter 1`] = `
Array [
  Object {
    "description": "Lorem ipsum dolor sit amet",
    "in": "query",
    "name": "name",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Decorators Should able to add multiple tags on action 1`] = `
Object {
  "parameters": Array [],
  "requestBody": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "application/x-www-form-urlencoded": Object {
        "schema": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "required": true,
  },
  "responses": Object {
    "200": Object {
      "content": Object {
        "application/json": Object {
          "schema": Object {
            "type": "object",
          },
        },
      },
      "description": "Response body",
    },
    "422": Object {
      "content": Object {
        "application/json": Object {
          "schema": Object {
            "$ref": "#/components/schemas/System-ValidationError",
          },
        },
      },
      "description": "Validation error",
    },
  },
  "tags": Array [
    "Ipsum",
    "Lorem",
  ],
}
`;

exports[`Open API 3.0 Generation Decorators Should able to add tags on action 1`] = `
Object {
  "parameters": Array [],
  "requestBody": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "application/x-www-form-urlencoded": Object {
        "schema": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "required": true,
  },
  "responses": Object {
    "200": Object {
      "content": Object {
        "application/json": Object {
          "schema": Object {
            "type": "object",
          },
        },
      },
      "description": "Response body",
    },
    "422": Object {
      "content": Object {
        "application/json": Object {
          "schema": Object {
            "$ref": "#/components/schemas/System-ValidationError",
          },
        },
      },
      "description": "Validation error",
    },
  },
  "tags": Array [
    "Lorem",
  ],
}
`;

exports[`Open API 3.0 Generation Decorators Should able to change response type 1`] = `
Object {
  "200": Object {
    "content": Object {
      "text/html": Object {
        "schema": Object {
          "type": "string",
        },
      },
    },
    "description": "",
  },
}
`;

exports[`Open API 3.0 Generation Decorators Should able to mark required 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Decorators Should able to rename field 1`] = `
Array [
  Object {
    "in": "query",
    "name": "data",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property 1`] = `
Object {
  "properties": Object {
    "id": Object {
      "readOnly": true,
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested array model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "items": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "readOnly": true,
            "type": "object",
          },
        ],
      },
      "readOnly": true,
      "type": "array",
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested inline array model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "items": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "readOnly": true,
            "type": "object",
          },
        ],
      },
      "readOnly": true,
      "type": "array",
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested inline array model 2`] = `
Object {
  "properties": Object {
    "id": Object {
      "type": "number",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested inline model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Animal",
        },
        Object {
          "readOnly": true,
          "type": "object",
        },
      ],
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested inline model 2`] = `
Object {
  "properties": Object {
    "id": Object {
      "type": "number",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set readonly property on nested model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Animal",
        },
        Object {
          "readOnly": true,
          "type": "object",
        },
      ],
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set write only property 1`] = `
Object {
  "properties": Object {
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
      "writeOnly": true,
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set write only property on nested array model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "items": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "type": "object",
            "writeOnly": true,
          },
        ],
      },
      "type": "array",
      "writeOnly": true,
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set write only property on nested inline array model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "items": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "type": "object",
            "writeOnly": true,
          },
        ],
      },
      "type": "array",
      "writeOnly": true,
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set write only property on nested inline model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Animal",
        },
        Object {
          "type": "object",
          "writeOnly": true,
        },
      ],
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should able to set write only property on nested model 1`] = `
Object {
  "properties": Object {
    "animal": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Animal",
        },
        Object {
          "type": "object",
          "writeOnly": true,
        },
      ],
    },
    "id": Object {
      "type": "number",
    },
    "password": Object {
      "type": "string",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Decorators Should provide html response on History Api Fallback 1`] = `
Object {
  "200": Object {
    "content": Object {
      "text/html": Object {
        "schema": Object {
          "type": "string",
        },
      },
    },
    "description": "",
  },
}
`;

exports[`Open API 3.0 Generation Durability Should transform if method return type not specified 1`] = `
Object {
  "200": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "type": "object",
        },
      },
    },
    "description": "Response body",
  },
  "422": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "$ref": "#/components/schemas/System-ValidationError",
        },
      },
    },
    "description": "Validation error",
  },
}
`;

exports[`Open API 3.0 Generation Durability Should transform if no parameter type specified 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation File Body Request Should detect decorator binding 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "count": Object {
            "type": "number",
          },
          "file": Object {
            "format": "binary",
            "type": "string",
          },
          "type": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect decorator binding with array 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "items": Object {
              "format": "binary",
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect decorator binding without FormFile type 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "format": "binary",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect decorator binding without FormFile type but with array 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "items": Object {
              "format": "binary",
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect name binding 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "count": Object {
            "type": "number",
          },
          "file": Object {
            "format": "binary",
            "type": "string",
          },
          "type": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect single name binding 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "format": "binary",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect single name binding with PATCH method 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "format": "binary",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation File Body Request Should detect single name binding with PUT method 1`] = `
Object {
  "content": Object {
    "multipart/form-data": Object {
      "schema": Object {
        "properties": Object {
          "file": Object {
            "format": "binary",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Info Should able to override spec info 1`] = `
Object {
  "description": "Lorem ipsum",
  "title": "Pet Api Explorer",
  "version": "1.0.0",
}
`;

exports[`Open API 3.0 Generation Info Should able to provide spec info 1`] = `
Object {
  "title": "Api Explorer",
  "version": "1.0.0",
}
`;

exports[`Open API 3.0 Generation Parameter Should detect cookie parameter with @bind.cookie() 1`] = `
Array [
  Object {
    "in": "cookie",
    "name": "id",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect header parameter with @bind.header() 1`] = `
Array [
  Object {
    "in": "header",
    "name": "id",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect header parameter with @bind.header() of type object 1`] = `
Array [
  Object {
    "in": "header",
    "name": "str",
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "header",
    "name": "num",
    "schema": Object {
      "type": "number",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect name binding and model binding on post method 1`] = `
Array [
  Object {
    "in": "query",
    "name": "type",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect name binding on post method as body 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should detect path parameter 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect path parameter with required 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter 1`] = `
Array [
  Object {
    "in": "query",
    "name": "str",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "num",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "bool",
    "required": false,
    "schema": Object {
      "type": "boolean",
    },
  },
  Object {
    "in": "query",
    "name": "date",
    "required": false,
    "schema": Object {
      "format": "date-time",
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter of type object 1`] = `
Array [
  Object {
    "in": "query",
    "name": "query",
    "required": false,
    "schema": Object {
      "$ref": "#/components/schemas/Query",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter with @bind.query() 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter with @bind.query() of type object 1`] = `
Array [
  Object {
    "in": "query",
    "name": "str",
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "num",
    "schema": Object {
      "type": "number",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter with @bind.query() of type object with required 1`] = `
Array [
  Object {
    "in": "query",
    "name": "str",
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "num",
    "schema": Object {
      "type": "number",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should detect query parameter with required 1`] = `
Array [
  Object {
    "in": "query",
    "name": "str",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should hide query object relation 1`] = `
Array [
  Object {
    "in": "query",
    "name": "query",
    "required": false,
    "schema": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Query",
        },
        Object {
          "properties": Object {
            "sub": Object {
              "type": "number",
            },
          },
          "type": "object",
        },
      ],
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should hide readonly field on query parameter object 1`] = `
Array [
  Object {
    "in": "query",
    "name": "query",
    "required": false,
    "schema": Object {
      "$ref": "#/components/schemas/Query",
    },
  },
]
`;

exports[`Open API 3.0 Generation Parameter Should hide readonly field on query parameter object 2`] = `
Object {
  "properties": Object {
    "email": Object {
      "type": "number",
    },
    "name": Object {
      "type": "string",
    },
    "password": Object {
      "readOnly": true,
      "type": "boolean",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.body() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.ctx() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.custom() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.fromFile() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.request() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore @bind.user() parameter 1`] = `Array []`;

exports[`Open API 3.0 Generation Parameter Should ignore all required properties when provided @val.partial() on @bind.query() 1`] = `
Array [
  Object {
    "in": "query",
    "name": "str",
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "num",
    "schema": Object {
      "type": "number",
    },
  },
]
`;

exports[`Open API 3.0 Generation Path Should combine path based on resource 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "System-DefaultErrorMessage": Object {
        "properties": Object {
          "message": Object {
            "type": "string",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "System-ValidationError": Object {
        "properties": Object {
          "message": Object {
            "items": Object {
              "properties": Object {
                "messages": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
                "path": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "title": "Api Explorer",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/users": Object {
      "get": Object {
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "type": "object",
                },
              },
            },
            "description": "Response body",
          },
        },
        "tags": Array [
          "Users",
        ],
      },
      "post": Object {
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "type": "object",
                },
              },
            },
            "description": "Response body",
          },
        },
        "tags": Array [
          "Users",
        ],
      },
    },
  },
}
`;

exports[`Open API 3.0 Generation Path Should combine path using different controllers 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "System-DefaultErrorMessage": Object {
        "properties": Object {
          "message": Object {
            "type": "string",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "System-ValidationError": Object {
        "properties": Object {
          "message": Object {
            "items": Object {
              "properties": Object {
                "messages": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
                "path": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "title": "Api Explorer",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/users": Object {
      "get": Object {
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "type": "object",
                },
              },
            },
            "description": "Response body",
          },
        },
        "tags": Array [
          "UsersEx",
        ],
      },
      "post": Object {
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "type": "object",
                },
              },
            },
            "description": "Response body",
          },
        },
        "tags": Array [
          "Users",
        ],
      },
    },
  },
}
`;

exports[`Open API 3.0 Generation Path Should convert path properly 1`] = `
Object {
  "/users/{id}/{type}/{index}": Object {
    "get": Object {
      "parameters": Array [
        Object {
          "in": "path",
          "name": "id",
          "required": false,
          "schema": Object {
            "type": "string",
          },
        },
        Object {
          "in": "path",
          "name": "type",
          "required": false,
          "schema": Object {
            "type": "string",
          },
        },
        Object {
          "in": "path",
          "name": "index",
          "required": false,
          "schema": Object {
            "type": "number",
          },
        },
      ],
      "responses": Object {
        "200": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "type": "object",
              },
            },
          },
          "description": "Response body",
        },
        "422": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/System-ValidationError",
              },
            },
          },
          "description": "Validation error",
        },
      },
      "tags": Array [
        "Users",
      ],
    },
  },
}
`;

exports[`Open API 3.0 Generation Request Body Model binding should not pick model with binding decorator 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() with PATCH method 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() with PUT method 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() with array element 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() with array element with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "required": Array [
                "userName",
              ],
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "required": Array [
                "userName",
              ],
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect @bind.body() with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
            ],
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
            ],
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect model binding 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect model binding with array 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect model binding with array with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "required": Array [
                "userName",
              ],
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "required": Array [
                "userName",
              ],
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect model binding with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
            ],
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
            ],
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect name binding 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "properties": Object {
          "password": Object {
            "type": "string",
          },
          "userName": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "properties": Object {
          "password": Object {
            "type": "string",
          },
          "userName": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should detect name binding with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "properties": Object {
          "password": Object {
            "type": "string",
          },
          "userName": Object {
            "type": "string",
          },
        },
        "required": Array [
          "userName",
        ],
        "type": "object",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "properties": Object {
          "password": Object {
            "type": "string",
          },
          "userName": Object {
            "type": "string",
          },
        },
        "required": Array [
          "userName",
        ],
        "type": "object",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should ignore required field when @val.partial() specified 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body Should ignore required field when @val.partial() specified on model binding 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should able combine with required 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
              "password",
            ],
            "type": "object",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "required": Array [
              "userName",
              "password",
            ],
            "type": "object",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should able to transform body with relation 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should able to transform other type 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should able use multiple relations 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "otherPet": Object {
                "items": Object {
                  "type": "number",
                },
                "type": "array",
              },
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "otherPet": Object {
                "items": Object {
                  "type": "number",
                },
                "type": "array",
              },
              "pet": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should able use multiple relations in array model 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "properties": Object {
                "otherPet": Object {
                  "items": Object {
                    "type": "number",
                  },
                  "type": "array",
                },
                "pet": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "properties": Object {
                "otherPet": Object {
                  "items": Object {
                    "type": "number",
                  },
                  "type": "array",
                },
                "pet": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should not error when model type not specified 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/Object",
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/Object",
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should work on array relation 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "items": Object {
                  "type": "number",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/User",
          },
          Object {
            "properties": Object {
              "pet": Object {
                "items": Object {
                  "type": "number",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should work on inverse property relation 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "properties": Object {
              "user": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "properties": Object {
              "user": Object {
                "type": "number",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Request Body With Relation Property Should work with array type model 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "properties": Object {
                "pet": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/components/schemas/User",
            },
            Object {
              "properties": Object {
                "pet": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
          ],
        },
        "type": "array",
      },
    },
  },
  "required": true,
}
`;

exports[`Open API 3.0 Generation Response Should detect array object response 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "items": Object {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
      },
    },
  },
  "description": "Response body",
}
`;

exports[`Open API 3.0 Generation Response Should detect array object response 2`] = `
Object {
  "System-DefaultErrorMessage": Object {
    "properties": Object {
      "message": Object {
        "type": "string",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "System-ValidationError": Object {
    "properties": Object {
      "message": Object {
        "items": Object {
          "properties": Object {
            "messages": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
            "path": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "User": Object {
    "properties": Object {
      "password": Object {
        "type": "string",
      },
      "userName": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`Open API 3.0 Generation Response Should detect nested object array response 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "description": "Response body",
}
`;

exports[`Open API 3.0 Generation Response Should detect nested object array response 2`] = `
Object {
  "properties": Object {
    "password": Object {
      "type": "string",
    },
    "tag": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
    "userName": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Response Should detect nested object array response 3`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API 3.0 Generation Response Should detect nested object response 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "description": "Response body",
}
`;

exports[`Open API 3.0 Generation Response Should detect nested object response 2`] = `
Object {
  "System-DefaultErrorMessage": Object {
    "properties": Object {
      "message": Object {
        "type": "string",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "System-ValidationError": Object {
    "properties": Object {
      "message": Object {
        "items": Object {
          "properties": Object {
            "messages": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
            "path": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "Tag": Object {
    "properties": Object {
      "tag": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "User": Object {
    "properties": Object {
      "password": Object {
        "type": "string",
      },
      "tag": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "userName": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`Open API 3.0 Generation Response Should detect object response 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/User",
      },
    },
  },
  "description": "Response body",
}
`;

exports[`Open API 3.0 Generation Response Should detect object response 2`] = `
Object {
  "System-DefaultErrorMessage": Object {
    "properties": Object {
      "message": Object {
        "type": "string",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "System-ValidationError": Object {
    "properties": Object {
      "message": Object {
        "items": Object {
          "properties": Object {
            "messages": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
            "path": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "status": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "User": Object {
    "properties": Object {
      "password": Object {
        "type": "string",
      },
      "userName": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`Open API 3.0 Generation Route Grouping Should generate Open API schema properly 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "System-DefaultErrorMessage": Object {
        "properties": Object {
          "message": Object {
            "type": "string",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "System-ValidationError": Object {
        "properties": Object {
          "message": Object {
            "items": Object {
              "properties": Object {
                "messages": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
                "path": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "status": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "title": "Api Explorer",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/api/v1/animal/method": Object {
      "get": Object {
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "type": "object",
                },
              },
            },
            "description": "Response body",
          },
        },
        "tags": Array [
          "Animal",
        ],
      },
    },
  },
}
`;

exports[`Open API 3.0 Generation Security Should apply security on secured operation 1`] = `
Array [
  Object {
    "bearer": Array [],
  },
]
`;

exports[`Open API 3.0 Generation Security Should apply security on secured operation by role 1`] = `
Array [
  Object {
    "bearer": Array [],
  },
]
`;

exports[`Open API 3.0 Generation Security Should apply security response on secured operation by role 1`] = `
Object {
  "200": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "type": "object",
        },
      },
    },
    "description": "Response body",
  },
  "401": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "$ref": "#/components/schemas/System-DefaultErrorMessage",
        },
      },
    },
    "description": "Unauthorized error",
  },
  "403": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "$ref": "#/components/schemas/System-DefaultErrorMessage",
        },
      },
    },
    "description": "Forbidden error",
  },
  "422": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "$ref": "#/components/schemas/System-ValidationError",
        },
      },
    },
    "description": "Validation error",
  },
}
`;

exports[`Open API 3.0 Generation Security Should generate security component if authorization is activated 1`] = `
Object {
  "bearer": Object {
    "bearerFormat": "JWT",
    "scheme": "bearer",
    "type": "http",
  },
}
`;

exports[`Open API 3.0 Generation Security Should not apply security on class scope public with filter 1`] = `undefined`;

exports[`Open API 3.0 Generation Security Should not apply security on public operation 1`] = `undefined`;

exports[`Open API 3.0 Generation Security Should not apply security response on public operation 1`] = `
Object {
  "200": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "type": "object",
        },
      },
    },
    "description": "Response body",
  },
  "422": Object {
    "content": Object {
      "application/json": Object {
        "schema": Object {
          "$ref": "#/components/schemas/System-ValidationError",
        },
      },
    },
    "description": "Validation error",
  },
}
`;

exports[`Open API 3.0 Generation Security Should not generate security component if authorization is not activated 1`] = `undefined`;

exports[`Open API 3.0 Generation Virtual Routes Should able to define custom specification 1`] = `
Object {
  "get": Object {
    "description": "Lorem ipsum",
    "parameters": Object {
      "name": Object {
        "description": "Lorem ipsum",
        "in": "query",
      },
    },
  },
}
`;

exports[`Open API 3.0 Generation Virtual Routes Should transform virtual route 1`] = `
Object {
  "get": Object {
    "parameters": Array [],
    "responses": Object {
      "200": Object {
        "content": Object {
          "application/json": Object {},
        },
        "description": "Response body",
      },
    },
    "tags": Array [
      "MyFacility",
    ],
  },
}
`;
